# mc-failrate-demo

./: pyproject.toml
mc_failrate_demo/: mc_failrate.py  mc_failrate_survivalmodel.py  mc_failrate_unkillable.py
